Print more helpful error message when getting OOM due to low Java Heap base when running with CompressedOops

XMLWordPrintable

    • b128

      We have seen issues where users have gotten native OutOfMemory errors due to low HeapBaseMinAddress on Solaris with compressed refs. This is hard to know for most users. We should improve the error message on native OOM to help here.

      Best case, we would know when this happens, and only print something if this is the issue.

      If that is not possible, we could always print this when running on Solaris with compressed references.

            Assignee:
            Poonam Bajaj Parhar
            Reporter:
            Mattis Castegren (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: