8064814: Print more helpful error message when getting OOM due to low Java Heap base when running with CompressedOops

Improve OOM error message

Reviewed-by: coleenp, dholmes